# LLMStudio

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-train.txt  requirements.txt
config/: default.yaml  models.yaml
docs/: architecture.md  configuration.md  data-format.md  getting-started.md  gpu-and-quantization.md  troubleshooting.md
src/llmstudio/: __init__.py  cli.py  version.py
src/llmstudio/config/: __init__.py  paths.py  settings.py
src/llmstudio/core/: __init__.py
src/llmstudio/core/assistant/: README.md  __init__.py  data_assistant.py  hyperparam_advisor.py  llm.py  prompts.py
src/llmstudio/core/data/: README.md  __init__.py  formatter.py  loaders.py  preparer.py  schema.py  validator.py
src/llmstudio/core/gpu/: __init__.py  detector.py  recommender.py
src/llmstudio/core/inference/: __init__.py  engine.py
src/llmstudio/core/models/: README.md  __init__.py  catalog.py  downloader.py  registry.py
src/llmstudio/core/training/: README.md  __init__.py  callbacks.py  config.py  engine.py  job.py  manager.py
src/llmstudio/core/utils/: __init__.py  db.py  events.py  logging.py  resources.py
src/llmstudio/services/: README.md  __init__.py  assistant_service.py  data_service.py  inference_service.py  registry_service.py  system_service.py  training_service.py
src/llmstudio/ui/: README.md  __init__.py  app.py  theme.py
src/llmstudio/ui/assets/: README.md
src/llmstudio/ui/components/: __init__.py  common.py  ui_kit.py
src/llmstudio/ui/pages/: __init__.py  configure.py  data.py  home.py  inference.py  registry.py  train.py
tests/: README.md  test_data_pipeline.py  test_events.py  test_gpu_recommender.py  test_training_config.py
