[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "llmstudio"
dynamic = ["version"]
description = "A no-code studio for fine-tuning open-source LLMs (LoRA/QLoRA via Unsloth) with a guided GUI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "LLM Studio Contributors" }]
keywords = ["llm", "fine-tuning", "lora", "qlora", "unsloth", "gradio", "no-code", "mlops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ---------------------------------------------------------------------------
# Core dependencies: enough to launch the GUI, browse the catalog, validate &
# prepare data, and manage jobs/registry. The heavy ML stack (torch, unsloth,
# ...) lives in the `train` extra so the app installs and the UI boots even on
# a machine without a GPU.
# ---------------------------------------------------------------------------
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "gradio>=4.44,<6",
    "pandas>=2.0",
    "huggingface-hub>=0.24",
    "datasets>=2.20",
    "SQLAlchemy>=2.0",
    "psutil>=5.9",
    "packaging>=23.0",
    "nvidia-ml-py>=12.0",
]

[project.optional-dependencies]
# Training / inference stack. On the GPU box, install Unsloth following the
# official instructions for your CUDA version, then `pip install -e ".[train]"`.
train = [
    "torch>=2.3",
    "transformers>=4.44",
    "trl>=0.9",
    "peft>=0.12",
    "accelerate>=0.33",
    "bitsandbytes>=0.43; platform_system != 'Darwin'",
    "sentencepiece>=0.2",
    "protobuf>=4.0",
    "unsloth>=2024.8",
]
# Optional parsers for richer document ingestion (PDF / DOCX / XLSX).
data = [
    "pypdf>=4.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
]
# Faster / nicer inference + serving helpers (optional).
serve = [
    "accelerate>=0.33",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.0",
    "mypy>=1.10",
]
# Everything except the GPU training stack — handy for UI/dev work off-GPU.
all = [
    "llmstudio[data,serve,dev]",
]

[project.scripts]
llmstudio = "llmstudio.cli:main"
llm-studio = "llmstudio.cli:main"

[project.urls]
Homepage = "https://github.com/llmstudio/llmstudio"
Documentation = "https://github.com/llmstudio/llmstudio/tree/main/docs"
Repository = "https://github.com/llmstudio/llmstudio"

[tool.hatch.version]
path = "src/llmstudio/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/llmstudio"]

[tool.hatch.build.targets.sdist]
include = ["src/llmstudio", "config", "docs", "README.md", "LICENSE"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]  # E501: line length handled by black; B008: typer/gradio default-call pattern

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = ["ignore::DeprecationWarning"]
